test/cases/compile_errors/struct_init_syntax_for_array.zig
const foo = [3]u16{ .x = 1024 };
comptime {
    _ = foo;
}

// error
// backend=stage2
// target=native
//
// :1:13: error: initializing array with struct syntax
